fixing collapse on button group when screen size is to small

--- a/src/components/button-group/ButtonGroup.style.scss
+++ b/src/components/button-group/ButtonGroup.style.scss
@@ -6,9 +6,8 @@
   border: none;
   width: fit-content;
   position: relative;
-  margin-bottom: 1rem !important;
-  display: flex;
-  flex-flow: row wrap;
+  margin-bottom: 1rem;
+  display: inline-flex;
 
   * {
     margin-bottom: 0;
@@ -17,11 +16,11 @@
   .button {
     margin-bottom: 0;
     border-radius: 0;
-    display: flex;
+    display: inline-flex;
   }
 
   > div, .dropdown__trigger, .dropdown {
-    display: flex;
+    display: inline-flex;
     margin-bottom: 0 !important;
   }
 
